k8s/emby/overlay/volume-mounts-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emby
spec:
  template:
    spec:
      containers:
      - name: emby
        volumeMounts:
        - name: emby-config
          mountPath: /config
        - name: emby-media
          mountPath: /mnt/media
      volumes:
      - name: emby-config
        persistentVolumeClaim:
          claimName: emby-config-pvc
      - name: emby-media
        persistentVolumeClaim:
          claimName: emby-media-pvc
