k8s/emby/overlay/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external
spec:
  ingressClassName: external
  tls:
  - hosts:
    - emby.jali-clarke.ca
    secretName: jali-clarke-ca
  rules:
  - host: emby.jali-clarke.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: emby-service
            port:
              number: 80
