k8s/emby/overlay/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: internal
  rules:
  - host: emby.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: emby-service
            port:
              number: 80
